--- a/templates/proxy.conf.erb
+++ b/templates/proxy.conf.erb
@@ -4,7 +4,7 @@ server {
     server_name  development.local;
 
     location / {
-      proxy_pass http://127.0.0.1:3000/;
+      proxy_pass http://127.0.0.1:7000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
